[gd_scene load_steps=7 format=2]

[ext_resource path="res://earth/earth.tscn" type="PackedScene" id=1]
[ext_resource path="res://world/world.gd" type="Script" id=2]
[ext_resource path="res://asteroid/asteroid.tscn" type="PackedScene" id=3]
[ext_resource path="res://world/star.svg" type="Texture" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -596.825, -360, 0, 0, 0, 0, 1571.17, -360, 0, 0, 0, 0, 1571.17, 928, 0, 0, 0, 0, -596.825, 928, 0, 0, 0, 0, -596.825, -360 )
}

[sub_resource type="TileSet" id=2]
0/name = "star.svg 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 2, 2 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="World" type="Node"]
script = ExtResource( 2 )
Asteroid = ExtResource( 3 )

[node name="Earth" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 300 )

[node name="Camera2D" type="Camera2D" parent="Earth"]
current = true

[node name="AsteroidSpawner" type="Timer" parent="."]

[node name="AsteroidPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="AsteroidSpawnLocation" type="PathFollow2D" parent="AsteroidPath"]
position = Vector2( -596.823, -360 )
offset = 0.00390625

[node name="Stars" type="TileMap" parent="."]
z_index = -100
tile_set = SubResource( 2 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 55, 0, 0, 65641, 0, 0, 131081, 0, 0, 131105, 0, 0, 131132, 0, 0, 131164, 0, 0, 131168, 0, 0, 131173, 0, 0, 131190, 0, 0, 131198, 0, 0, 196622, 0, 0, 196630, 0, 0, 196636, 0, 0, 196653, 0, 0, 196658, 0, 0, 196670, 0, 0, 196677, 0, 0, 196683, 0, 0, 196686, 0, 0, 196687, 0, 0, 196693, 0, 0, 262148, 0, 0, 262175, 0, 0, 262178, 0, 0, 262199, 0, 0, 262203, 0, 0, 262252, 0, 0, 327689, 0, 0, 327703, 0, 0, 327738, 0, 0, 327749, 0, 0, 327765, 0, 0, 393254, 0, 0, 393256, 0, 0, 393262, 0, 0, 393263, 0, 0, 393279, 0, 0, 393287, 0, 0, 393294, 0, 0, 393303, 0, 0, 393319, 0, 0, 393320, 0, 0, 393339, 0, 0, 458768, 0, 0, 458769, 0, 0, 458779, 0, 0, 458802, 0, 0, 458806, 0, 0, 458871, 0, 0, 524293, 0, 0, 524316, 0, 0, 524323, 0, 0, 524331, 0, 0, 524332, 0, 0, 524333, 0, 0, 524338, 0, 0, 524367, 0, 0, 524401, 0, 0, 589830, 0, 0, 589844, 0, 0, 589856, 0, 0, 589883, 0, 0, 589893, 0, 0, 589899, 0, 0, 589946, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655372, 0, 0, 655404, 0, 0, 655435, 0, 0, 655436, 0, 0, 655441, 0, 0, 655446, 0, 0, 655447, 0, 0, 655455, 0, 0, 655461, 0, 0, 655463, 0, 0, 655486, 0, 0, 720922, 0, 0, 720931, 0, 0, 720942, 0, 0, 720992, 0, 0, 720999, 0, 0, 721000, 0, 0, 786449, 0, 0, 786492, 0, 0, 786495, 0, 0, 786502, 0, 0, 786541, 0, 0, 851972, 0, 0, 851976, 0, 0, 851983, 0, 0, 852020, 0, 0, 852066, 0, 0, 917532, 0, 0, 917544, 0, 0, 917586, 0, 0, 917587, 0, 0, 917594, 0, 0, 917611, 0, 0, 917618, 0, 0, 983059, 0, 0, 983070, 0, 0, 983086, 0, 0, 983093, 0, 0, 983111, 0, 0, 983116, 0, 0, 983132, 0, 0, 983141, 0, 0, 983148, 0, 0, 983149, 0, 0, 1048589, 0, 0, 1048598, 0, 0, 1048606, 0, 0, 1048685, 0, 0, 1114133, 0, 0, 1114136, 0, 0, 1114149, 0, 0, 1114192, 0, 0, 1179652, 0, 0, 1179658, 0, 0, 1179663, 0, 0, 1179669, 0, 0, 1179738, 0, 0, 1179773, 0, 0, 1245190, 0, 0, 1245229, 0, 0, 1245239, 0, 0, 1245246, 0, 0, 1245247, 0, 0, 1245248, 0, 0, 1245250, 0, 0, 1245281, 0, 0, 1245282, 0, 0, 1245297, 0, 0, 1245307, 0, 0, 1310752, 0, 0, 1310770, 0, 0, 1310792, 0, 0, 1310794, 0, 0, 1310829, 0, 0, 1376306, 0, 0, 1376315, 0, 0, 1376347, 0, 0, 1376374, 0, 0, 1441801, 0, 0, 1441810, 0, 0, 1441815, 0, 0, 1441834, 0, 0, 1441906, 0, 0, 1507368, 0, 0, 1507385, 0, 0, 1507409, 0, 0, 1507429, 0, 0, 1507447, 0, 0, 1572866, 0, 0, 1572913, 0, 0, 1572916, 0, 0, 1572928, 0, 0, 1572987, 0, 0, 1572988, 0, 0, 1638422, 0, 0, 1638437, 0, 0, 1638448, 0, 0, 1638455, 0, 0, 1638497, 0, 0, 1703950, 0, 0, 1703957, 0, 0, 1703958, 0, 0, 1703968, 0, 0, 1703972, 0, 0, 1704022, 0, 0, 1704055, 0, 0, 1769485, 0, 0, 1769490, 0, 0, 1769531, 0, 0, 1769548, 0, 0, 1769560, 0, 0, 1769565, 0, 0, 1769593, 0, 0, 1835021, 0, 0, 1835034, 0, 0, 1835053, 0, 0, 1835058, 0, 0, 1835075, 0, 0, 1835123, 0, 0, 1835130, 0, 0, 1900551, 0, 0, 1900576, 0, 0, 1900596, 0, 0, 1900616, 0, 0, 1900622, 0, 0, 1900641, 0, 0, 1966116, 0, 0, 1966120, 0, 0, 1966137, 0, 0, 1966174, 0, 0, 1966177, 0, 0, 1966192, 0, 0, 2031660, 0, 0, 2031684, 0, 0, 2031691, 0, 0, 2031723, 0, 0, 2097155, 0, 0, 2097164, 0, 0, 2097205, 0, 0, 2097210, 0, 0, 2097213, 0, 0, 2097217, 0, 0, 2097268, 0, 0, 2097280, 0, 0, 2162700, 0, 0, 2162789, 0, 0, 2162814, 0, 0, 2228229, 0, 0, 2228230, 0, 0, 2228239, 0, 0, 2228270, 0, 0, 2228311, 0, 0, 2228316, 0, 0, 2293782, 0, 0, 2293790, 0, 0, 2293809, 0, 0, 2293836, 0, 0, 2293882, 0, 0, 2359323, 0, 0, 2359332, 0, 0, 2359339, 0, 0, 2359357, 0, 0, 2359365, 0, 0, 2359381, 0, 0, 2424855, 0, 0, 2424886, 0, 0, 2424940, 0, 0, 2424948, 0, 0, 2490386, 0, 0, 2490409, 0, 0, 2490422, 0, 0, 2555938, 0, 0, 2555983, 0, 0, 2621443, 0, 0, 2621450, 0, 0, 2621455, 0, 0, 2621471, 0, 0, 2621478, 0, 0, 2621525, 0, 0, 2621534, 0, 0, 2621542, 0, 0, 2686992, 0, 0, 2687004, 0, 0, 2687019, 0, 0, 2687069, 0, 0, 2687070, 0, 0, 2687078, 0, 0, 2687087, 0, 0, 2687100, 0, 0, 2752516, 0, 0, 2752587, 0, 0, 2752611, 0, 0, 2752631, 0, 0, 2818081, 0, 0, 2818104, 0, 0, 2818137, 0, 0, 2883628, 0, 0, 2883660, 0, 0, 2949142, 0, 0, 2949157, 0, 0, 2949204, 0, 0, 2949212, 0, 0, 2949229, 0, 0, 2949246, 0, 0, 3014675, 0, 0, 3014686, 0, 0, 3014692, 0, 0, 3014693, 0, 0, 3014701, 0, 0, 3014706, 0, 0, 3080205, 0, 0, 3080223, 0, 0, 3080228, 0, 0, 3080242, 0, 0, 3080249, 0, 0, 3080308, 0, 0, 3080317, 0, 0, 3145817, 0, 0, 3145822, 0, 0, 3211268, 0, 0, 3211272, 0, 0, 3211288, 0, 0, 3211309, 0, 0, 3211348, 0, 0, 3211365, 0, 0, 3211366, 0, 0, 3211373, 0, 0, 3211380, 0, 0, 3276807, 0, 0, 3276808, 0, 0, 3276817, 0, 0, 3276828, 0, 0, 3276844, 0, 0, 3276876, 0, 0, 3342375, 0, 0, 3342427, 0, 0, 3342428, 0, 0, 3342440, 0, 0, 3342446, 0, 0, 3407892, 0, 0, 3407904, 0, 0, 3407910, 0, 0, 3407939, 0, 0, 3407954, 0, 0, 3407964, 0, 0, 3407974, 0, 0, 3407984, 0, 0, 3407995, 0, 0, 3473424, 0, 0, 3473458, 0, 0, 3473468, 0, 0, 3473528, 0, 0, 3538947, 0, 0, 3539068, 0, 0, 3604482, 0, 0, 3604504, 0, 0, 3604572, 0, 0, 3670026, 0, 0, 3670102, 0, 0, 3670114, 0, 0, 3670129, 0, 0, 3735587, 0, 0, 3801136, 0, 0, 3801150, 0, 0, 3801193, 0, 0, 3866631, 0, 0, 3866641, 0, 0, 3866674, 0, 0, 3866695, 0, 0, 3866701, 0, 0, 3866705, 0, 0, 3932188, 0, 0, 3932226, 0, 0, 3932257, 0, 0, 3997713, 0, 0, 3997737, 0, 0, 3997770, 0, 0, 3997812, 0, 0, 3997819, 0, 0, 4063254, 0, 0, 4063291, 0, 0, 4063352, 0, 0, 4063355, 0, 0, 4128800, 0, 0, 4128803, 0, 0, 4128822, 0, 0, 4128839, 0, 0, 4128852, 0, 0, 4194308, 0, 0, 4194317, 0, 0, 4194381, 0, 0, 4194399, 0, 0, 4194414, 0, 0, 4259909, 0, 0, 4259961, 0, 0, 4325386, 0, 0, 4325396, 0, 0, 4325398, 0, 0, 4325403, 0, 0, 4325423, 0, 0, 4325429, 0, 0, 4325441, 0, 0, 4325448, 0, 0, 4325449, 0, 0, 4325489, 0, 0, 4390917, 0, 0, 4390951, 0, 0, 4391002, 0, 0, 4456466, 0, 0, 4456483, 0, 0, 4456491, 0, 0, 4456531, 0, 0, 4456559, 0, 0, 4521995, 0, 0, 4522041, 0, 0, 4522052, 0, 0, 4522087, 0, 0, 4522101, 0, 0, 4522107, 0, 0, 4587550, 0, 0, 4587568, 0, 0, 4587629, 0, 0, 4653095, 0, 0, 4653117, 0, 0, 4653131, 0, 0, 4653146, 0, 0, 4718609, 0, 0, 4718617, 0, 0, 4718623, 0, 0, 4718676, 0, 0, 4718690, 0, 0, 4718713, 0, 0, 4784131, 0, 0, 4784151, 0, 0, 4784173, 0, 0, 4784199, 0, 0, 4849719, 0, 0, 4915304, 0, 0, 4915321, 0, 0 )
[connection signal="earth_hit" from="Earth" to="." method="_on_Earth_hit"]
[connection signal="timeout" from="AsteroidSpawner" to="." method="_on_AsteroidSpawner_timeout"]
